# hwt901b

./: .gitignore  LICENSE  README.md  mag_calibration.json  pyproject.toml  wave_capture.csv
examples/: basic_read.py  calibrate_magnetometer.py  live_heading.py  stabilized_heading.py  wave_sim.py
hwt901b/: __init__.py  __main__.py  calibration.py  cli.py  gps.py  mount.py  nmea.py  profiler.py  protocol.py  sensor.py  stabilizer.py  transport.py
synthetic_waves/: W1_beam.csv  W2_beam.csv  W3_beam.csv  W4_beam.csv  confused_cross_sea.csv
tests/: test_protocol.py  test_sensor_reads.py  test_stabilizer_edge.py
